# mc-manager-discord-bot

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  manager_bot.py  pyproject.toml  requirements.txt
