[tool.poetry]
name = "mc_manager_discord_bot"
version = "0.1.0"
description = "A discord bot to manage minecraft server on GCP"
authors = ["Aruneko <aruneko99@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.2.5"
google-api-python-client = "^1.7.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
